services/kyc_extraction/k8s/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: kyc-extraction-deployment
  labels:
    app: kyc-extraction
spec:
  replicas: 1
  selector:
    matchLabels:
      app: kyc-extraction
  template:
    metadata:
      labels:
        app: kyc-extraction
    spec:
      containers:
        - name: kyc-extraction-docker
          image: trackwizz/kyc_extraction:skt-22-1-3
          imagePullPolicy: Always
          ports:
            - containerPort: 7001
          readinessProbe:
            httpGet:
              path: /api/extract/doc/actuator/health
              port: 7001
            initialDelaySeconds: 5
            periodSeconds: 10
                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                     [...]
